error while user1.html

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
     "randomatic": "^3.1.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^2.3.0"
   }
 }
